<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_profile_friends_list"
        android:layout_width="match_parent"
        android:layout_height="184dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_profile_group" />

    <ImageView
        android:id="@+id/imageview_profile_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        android:contentDescription="@string/avatar" />

    <TextView
        android:id="@+id/textview_profile_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/display_name"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/imageview_profile_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/phone"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/imageview_profile_avatar"
        app:layout_constraintTop_toBottomOf="@+id/textview_profile_full_name" />

    <TextView
        android:id="@+id/textview_profile_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/group"
        android:textSize="26sp"
        app:layout_constraintStart_toEndOf="@+id/imageview_profile_avatar"
        app:layout_constraintTop_toBottomOf="@+id/textview_profile_phone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:text="@string/friends"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview_profile_friends_list"
        app:layout_constraintStart_toStartOf="@+id/recyclerview_profile_friends_list" />

</androidx.constraintlayout.widget.ConstraintLayout>