<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/friend_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_blue"
        android:padding="16dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/friend_avatar_imageview"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/ic_profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/avatar"
            android:visibility="gone" />

        <TextView
            android:id="@+id/friend_name_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friend_avatar_imageview"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/friend_group_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friend_name_textview"
            android:layout_marginTop="8dp"
            android:text="@string/group"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintStart_toStartOf="@id/avatar_layout"
        app:layout_constraintTop_toBottomOf="@id/avatar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <Button
            android:id="@+id/call_button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/call"
            android:background="@drawable/border_for_buttons"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="4dp"
            android:textAllCaps="false"
            android:visibility="gone"/>

        <Button
            android:id="@+id/delete_friend_button"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/delete_friend"
            android:background="@drawable/border_for_buttons"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:padding="4dp"
            android:textAllCaps="false"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>